--- a/dashboard-youtube.html
+++ b/dashboard-youtube.html
@@ -5,7 +5,11 @@
 <link rel="import" href="../paper-tabs/paper-tabs.html">
 <link rel="import" href="../reviews-table/reviews-table.html">
 <link rel="import" href="../number-chart/number-chart.html">
-
+<link rel="import" href="../bower_components/elastic-client/elastic-client.html">
+<link rel="import" href="../bower_components/dashboard-youtube/dashboard-youtube.html">
+<link rel="import" href="../bower_components/youtube-displayer/youtube-displayer.html">
+<link rel="import" href="../bower_components/comments-displayer/comments-displayer.html">
+<link rel="import" href="../bower_components/sentiment-displayer/sentiment-displayer.html">
 
 
 <dom-module id="dashboard-youtube">
