--- a/dashboard-youtube.html
+++ b/dashboard-youtube.html
@@ -155,8 +155,8 @@
         if(ready){
           this.client.search({
           // undocumented params are appended to the query string
-          index: "test4",
-          type: "test4docs",
+          index: "finalindex",
+          type: "finaltype",
           body: {
             size: 100,
             aggs: {
@@ -191,10 +191,10 @@
             resp.hits.hits.forEach(function(entry){myids.push(entry._id)})
             that.ids = myids;
             
-            that.comments = resp.hits.hits[50]._source.comments;
-            that.data = resp.hits.hits[50]._source.subtitles;
+            that.comments = resp.hits.hits[0]._source.comments;
+            that.data = resp.hits.hits[0]._source.subtitles;
             console.log(resp);
-            that.videoid = resp.hits.hits[0]._source.videoId[0];
+            that.videoid = resp.hits.hits[0]._source.videoId;
            // console.log(that.videoid);
             
             });
