--- a/dashboard-youtube.html
+++ b/dashboard-youtube.html
@@ -95,6 +95,7 @@
         <youtube-displayer
         videoid='{{videoid}}'
         playing='{{playing}}'
+        initialtime='{{initialtime}}'
         id="youtube-displayer1"
         ></youtube-displayer>
     </div>
@@ -103,7 +104,7 @@
       <div id="widget-place">
           <sentiment-displayer
         data='{{data}}'
-        initialtime=''
+        initialtime='{{initialtime}}'
         playing='{{playing}}'
         id="sentiment-displayer1"
           ></sentiment-displayer>
